<resources>
    <string name="app_name">Project Manager</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up_now">Sign Up Now!</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="find_password">Find Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="mobile">Mobile</string>
    <string name="company_size">Company Size</string>
    <string name="your_role">Your Role</string>
    <string name="ex_admin_user">ex) admin / user</string>
    <string name="sign_up">Sign Up</string>
    <string name="back_to_sign_in">Back to Sign In</string>
    <string name="create_project">Create Project</string>
    <string name="tasks">Tasks</string>
    <string name="edit">Edit</string>
    <string name="end_date">End Date</string>
    <string name="start_date">Start Date</string>
    <string name="project_desc">Project Desc</string>
    <string name="project_status">Project Status</string>
    <string name="project_name">Project Name</string>
    <string name="edit_update">Edit/Update</string>
    <string name="create_task">Create Task</string>
    <string name="subtask">Subtask</string>
    <string name="task_name">Task name</string>
    <string name="task_desc">Task Desc</string>
    <string name="task_status">Task Status</string>
    <string name="create_subtask">Create Subtask</string>
    <string name="subtask_name">Subtask Name</string>
    <string name="project_id">Project ID</string>
    <string name="edit_project">Edit Project</string>
    <string name="task">Task</string>
    <string name="home_symbol">⌂</string>
    <string name="project">Project</string>
    <string name="employee">Employee</string>
    <string name="id">ID:</string>
    <string name="yyyy_mm_dd">yyyy-mm-dd</string>
    <string name="task_id">Task ID</string>
    <string name="team_member_user_id">Team Member User ID</string>
    <string name="subtask_id">Subtask ID</string>
    <string name="assign">Assign</string>
    <string name="user_home">User Home</string>
    <string name="assign_work">Assign Work</string>
    <string-array name="status">
        <item>1: Start new project</item>
        <item>2: Not complete</item>
        <item>3: Completed</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="subtask_status">Subtask Status</string>
    <string name="subtask_desc">Subtask Desc</string>
    <string name="team_member">Team Member</string>
    <string name="priority">Priority</string>
    <string name="edit_status">Edit Status</string>
</resources>
