<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary"
    tools:context=".AdminHomeActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:layout_margin="10dp"
            android:id="@+id/button_project"
            android:text="@string/project"
            android:layout_width="150dp"
            android:layout_height="wrap_content"/>

        <Button
            android:layout_margin="10dp"
            android:id="@+id/button_task"
            android:text="@string/task"
            android:layout_width="150dp"
            android:layout_height="wrap_content"/>

        <Button
            android:layout_margin="10dp"
            android:id="@+id/button_subtask"
            android:text="@string/subtask"
            android:layout_width="150dp"
            android:layout_height="wrap_content"/>

        <Button
            android:layout_margin="10dp"
            android:id="@+id/button_employee"
            android:text="@string/employee"
            android:layout_width="150dp"
            android:layout_height="wrap_content"/>

        <Button
            android:layout_margin="10dp"
            android:id="@+id/button_assignTabLayout"
            android:text="@string/assign_work"
            android:layout_width="150dp"
            android:layout_height="wrap_content"/>

        <Button
            android:layout_margin="10dp"
            android:id="@+id/button_userHome"
            android:text="@string/user_home"
            android:layout_width="150dp"
            android:layout_height="wrap_content"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>