<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:background="@color/colorPrimary"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:text="@string/first_name"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginHorizontal="35dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/editText_firstName"
            android:layout_marginHorizontal="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/last_name"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginHorizontal="35dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/editText_lastName"
            android:layout_marginHorizontal="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/email"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginHorizontal="35dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/editText_email"
            android:layout_marginHorizontal="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/mobile"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginHorizontal="35dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/editText_mobile"
            android:hint="only number. ex) 1112224444"
            android:layout_marginHorizontal="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/password"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginHorizontal="35dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/editText_password"
            android:inputType="textPassword"
            android:layout_marginHorizontal="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/company_size"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginHorizontal="35dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/editText_companySize"
            android:layout_marginHorizontal="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/your_role"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginHorizontal="35dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/editText_yourRole"
            android:inputType="textPassword"
            android:hint="@string/ex_admin_user"
            android:layout_marginHorizontal="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/button_signUp"
            android:text="@string/sign_up"
            android:textColor="@color/colorPrimaryDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>