<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context=".AdminProjectActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_margin="5dp"
            android:id="@+id/button_toAdminHome"
            android:text="@string/home_symbol"
            android:layout_width="50dp"
            android:layout_height="wrap_content"/>

        <Button
            android:layout_margin="5dp"
            android:id="@+id/button_toCreateProject"
            android:text="@string/create_project"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:layout_margin="5dp"
            android:id="@+id/button_toEditProject"
            android:text="@string/edit_project"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/project_item_layout"/>

</LinearLayout>