<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:background="@color/colorPrimary"
    tools:context=".AdminCreateSubtaskActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:text="@string/project_id"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginHorizontal="35dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/editText_projectId"
            android:layout_marginHorizontal="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/task_id"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginHorizontal="35dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/editText_taskId"
            android:layout_marginHorizontal="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/subtask_name"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginHorizontal="35dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/editText_subtaskName"
            android:layout_marginHorizontal="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="Subtask Status"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginHorizontal="35dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Spinner
            android:id="@+id/spinner_subtaskStatus"
            android:layout_marginHorizontal="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
<!--        <EditText-->
<!--            android:id="@+id/editText_subtaskStatus"-->
<!--            android:layout_marginHorizontal="30dp"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"/>-->

        <TextView
            android:text="Subtask Desc"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginHorizontal="35dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/editText_subtaskDesc"
            android:layout_marginHorizontal="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/start_date"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginHorizontal="35dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/editText_subtaskStartDate"
            android:hint="@string/yyyy_mm_dd"
            android:layout_marginHorizontal="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/end_date"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginHorizontal="35dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/editText_subtaskEndDate"
            android:hint="@string/yyyy_mm_dd"
            android:layout_marginHorizontal="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/button_createTask"
            android:text="@string/create_task"
            android:textColor="@color/colorPrimaryDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>